# tapir

./: .gitignore  Cargo.toml  Dockerfile  FONTS_LICENSES.md  LICENSE  PLAN.md  README.md  config.toml  flake.nix  labelmanagerpnp
.github/workflows/: container.yml  release.yml
.sisyphus/: ralph-loop.local.md
debian/: 99-dymo-labelmanager.rules  changelog  conffiles  control  copyright  labelmanagerpnp.service  postinst  rules  usb-modeswitch-dymo.conf
devices/: labelmanager-pnp.toml
docs/: labelmanagerpnp.service  udev-setup.md
labels/: 12mm-black-clear.toml  12mm-black-white.toml  12mm-clear.toml  12mm-white.toml  6mm-black-white.toml  6mm-white.toml  9mm-black-steelblue.toml  9mm-white.toml
scripts/: bdf2ttf.py  build-fonts.sh
src/: api.rs  config.rs  label.rs  main.rs
src/engine/: bitmap.rs  mod.rs  text.rs
src/usb/: device.rs  mod.rs  protocol.rs
static/: app.js  canvas-editor.js  index.html
