[package]
name = "labelforge"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust-native web interface for Dymo LabelManager PnP"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
nusb = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
cosmic-text = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
